today last update
add open and close effect

--- a/form.html
+++ b/form.html
@@ -33,7 +33,7 @@
 							<section class="formheader">
 								<div class="textarea">
 									<h1 class="formtitle">
-										<imput class="formtextInput titletextarea" rows="1" autofocus>簡易問卷</imput>
+										<input class="formtextInput titletextarea" rows="1" autofocus value="簡易問卷">
 									</h1>
 									<div class="hrline"></div>
 								</div>
@@ -172,6 +172,6 @@
 	<script src="https://dl.dropboxusercontent.com/u/50502234/jquery.min.js"></script>
 	<script src="js/classie.js"></script>
 	<script src="js/nestable.js"></script>
-	<script src="js/quizjs2.js"></script>
+	<script src="js/quizjs.js"></script>
 </body>
 </html>
