--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
 															<textarea class="formtextInput singleline" rows="2">單選題型</textarea>
 														</div>
 														<div class="answer insidefiled">
-															<div class="icon-add"><i class="material-icons">create</i></div>
 															<div class="answerwrap">
 																<div class="icon-del answer-del">
 																	<i class="material-icons icon-small icon-color">delete</i>
 																</div>
+																<div class="icon-add answer-add"></div>
 																<label for="answer" class="text answer-title">選項: </label>
 																<input class="select answer-input" type="text" placeholder="請輸入你的選項...">
 															</div>
@@ -97,6 +97,7 @@
 																<div class="icon-del answer-del">
 																	<i class="material-icons icon-small icon-color">delete</i>
 																</div>
+																<div class="icon-add answer-add"></div>
 																<label for="answer" class="text answer-title">選項: </label>
 																<input class="select answer-input" type="text" placeholder="請輸入你的選項...">
 															</div>
@@ -104,6 +105,7 @@
 																<div class="icon-del answer-del">
 																	<i class="material-icons icon-small icon-color">delete</i>
 																</div>
+																<div class="icon-add answer-add"></div>
 																<label for="answer" class="text answer-title">選項: </label>
 																<input class="select answer-input" type="text" placeholder="請輸入你的選項...">
 															</div>
@@ -111,12 +113,16 @@
 																<div class="icon-del answer-del">
 																	<i class="material-icons icon-small icon-color">delete</i>
 																</div>
+																<div class="icon-add answer-add"></div>
 																<label for="answer" class="text answer-title">選項: </label>
 																<input class="select answer-input" type="text" placeholder="請輸入你的選項...">
 															</div>
 															<div class="answerwrap">
 																<div class="icon-del answer-del">
 																	<i class="material-icons icon-small icon-color">delete</i>
+																</div>
+																<div class="icon-add answer-add">
+																	<i class="material-icons icon-small icon-color">create</i>
 																</div>
 																<label for="answer" class="text answer-title">選項: </label>
 																<input class="select answer-input" type="text" placeholder="請輸入你的選項...">
@@ -136,6 +142,7 @@
 																<div class="icon-del answer-del">
 																	<i class="material-icons icon-small icon-color">delete</i>
 																</div>
+																<div class="icon-add answer-add"></div>
 																<label for="answer" class="text answer-title">選項: </label>
 																<input class="select answer-input" type="text" placeholder="請輸入你的選項...">
 															</div>
@@ -143,6 +150,7 @@
 																<div class="icon-del answer-del">
 																	<i class="material-icons icon-small icon-color">delete</i>
 																</div>
+																<div class="icon-add answer-add"></div>
 																<label for="answer" class="text answer-title">選項: </label>
 																<input class="select answer-input" type="text" placeholder="請輸入你的選項...">
 															</div>
@@ -150,6 +158,7 @@
 																<div class="icon-del answer-del">
 																	<i class="material-icons icon-small icon-color">delete</i>
 																</div>
+																<div class="icon-add answer-add"></div>
 																<label for="answer" class="text answer-title">選項: </label>
 																<input class="select answer-input" type="text" placeholder="請輸入你的選項...">
 															</div>
@@ -157,6 +166,7 @@
 																<div class="icon-del answer-del">
 																	<i class="material-icons icon-small icon-color">delete</i>
 																</div>
+																<div class="icon-add answer-add"></div>
 																<label for="answer" class="text answer-title">選項: </label>
 																<input class="select answer-input" type="text" placeholder="請輸入你的選項...">
 															</div>
@@ -175,6 +185,7 @@
 																<div class="icon-del answer-del">
 																	<i class="material-icons icon-small icon-color">delete</i>
 																</div>
+																<div class="icon-add answer-add"></div>
 																<label for="answer" class="text answer-title">選項: </label>
 																<input class="select answer-input" type="text" placeholder="請輸入你的選項...">
 															</div>
@@ -182,6 +193,7 @@
 																<div class="icon-del answer-del">
 																	<i class="material-icons icon-small icon-color">delete</i>
 																</div>
+																<div class="icon-add answer-add"></div>
 																<label for="answer" class="text answer-title">選項: </label>
 																<input class="select answer-input" type="text" placeholder="請輸入你的選項...">
 															</div>
@@ -189,6 +201,7 @@
 																<div class="icon-del answer-del">
 																	<i class="material-icons icon-small icon-color">delete</i>
 																</div>
+																<div class="icon-add answer-add"></div>
 																<label for="answer" class="text answer-title">選項: </label>
 																<input class="select answer-input" type="text" placeholder="請輸入你的選項...">
 															</div>
@@ -196,6 +209,7 @@
 																<div class="icon-del answer-del">
 																	<i class="material-icons icon-small icon-color">delete</i>
 																</div>
+																<div class="icon-add answer-add"></div>
 																<label for="answer" class="text answer-title">選項: </label>
 																<input class="select answer-input" type="text" placeholder="請輸入你的選項...">
 															</div>
@@ -248,6 +262,7 @@
 																<div class="icon-del answer-del">
 																	<i class="material-icons icon-small icon-color">delete</i>
 																</div>
+																<div class="icon-add answer-add"></div>
 																<label for="answer" class="text answer-title">選項: </label>
 																<input class="select answer-input" type="text" placeholder="請輸入你的選項...">
 															</div>
@@ -255,6 +270,7 @@
 																<div class="icon-del answer-del">
 																	<i class="material-icons icon-small icon-color">delete</i>
 																</div>
+																<div class="icon-add answer-add"></div>
 																<label for="answer" class="text answer-title">選項: </label>
 																<input class="select answer-input" type="text" placeholder="請輸入你的選項...">
 															</div>
@@ -262,6 +278,7 @@
 																<div class="icon-del answer-del">
 																	<i class="material-icons icon-small icon-color">delete</i>
 																</div>
+																<div class="icon-add answer-add"></div>
 																<label for="answer" class="text answer-title">選項: </label>
 																<input class="select answer-input" type="text" placeholder="請輸入你的選項...">
 															</div>
@@ -269,6 +286,7 @@
 																<div class="icon-del answer-del">
 																	<i class="material-icons icon-small icon-color">delete</i>
 																</div>
+																<div class="icon-add answer-add"></div>
 																<label for="answer" class="text answer-title">選項: </label>
 																<input class="select answer-input" type="text" placeholder="請輸入你的選項...">
 															</div>
@@ -288,6 +306,7 @@
 																<div class="icon-del answer-del">
 																	<i class="material-icons icon-small icon-color">delete</i>
 																</div>
+																<div class="icon-add answer-add"></div>
 																<label for="answer" class="text answer-title">選項: </label>
 																<input class="select answer-input" type="text" placeholder="請輸入你的選項...">
 															</div>
@@ -295,6 +314,7 @@
 																<div class="icon-del answer-del">
 																	<i class="material-icons icon-small icon-color">delete</i>
 																</div>
+																<div class="icon-add answer-add"></div>
 																<label for="answer" class="text answer-title">選項: </label>
 																<input class="select answer-input" type="text" placeholder="請輸入你的選項...">
 															</div>
@@ -302,6 +322,7 @@
 																<div class="icon-del answer-del">
 																	<i class="material-icons icon-small icon-color">delete</i>
 																</div>
+																<div class="icon-add answer-add"></div>
 																<label for="answer" class="text answer-title">選項: </label>
 																<input class="select answer-input" type="text" placeholder="請輸入你的選項...">
 															</div>
@@ -309,6 +330,7 @@
 																<div class="icon-del answer-del">
 																	<i class="material-icons icon-small icon-color">delete</i>
 																</div>
+																<div class="icon-add answer-add"></div>
 																<label for="answer" class="text answer-title">選項: </label>
 																<input class="select answer-input" type="text" placeholder="請輸入你的選項...">
 															</div>
@@ -328,6 +350,7 @@
 																<div class="icon-del answer-del">
 																	<i class="material-icons icon-small icon-color">delete</i>
 																</div>
+																<div class="icon-add answer-add"></div>
 																<label for="answer" class="text answer-title">選項: </label>
 																<input class="select answer-input" type="text" placeholder="請輸入你的選項...">
 															</div>
@@ -335,6 +358,7 @@
 																<div class="icon-del answer-del">
 																	<i class="material-icons icon-small icon-color">delete</i>
 																</div>
+																<div class="icon-add answer-add"></div>
 																<label for="answer" class="text answer-title">選項: </label>
 																<input class="select answer-input" type="text" placeholder="請輸入你的選項...">
 															</div>
@@ -342,6 +366,7 @@
 																<div class="icon-del answer-del">
 																	<i class="material-icons icon-small icon-color">delete</i>
 																</div>
+																<div class="icon-add answer-add"></div>
 																<label for="answer" class="text answer-title">選項: </label>
 																<input class="select answer-input" type="text" placeholder="請輸入你的選項...">
 															</div>
@@ -349,6 +374,7 @@
 																<div class="icon-del answer-del">
 																	<i class="material-icons icon-small icon-color">delete</i>
 																</div>
+																<div class="icon-add answer-add"></div>
 																<label for="answer" class="text answer-title">選項: </label>
 																<input class="select answer-input" type="text" placeholder="請輸入你的選項...">
 															</div>
