update meta description
update meta description

--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="author" content="horkenw">
+    <meta name="copyright" content="horkenWong">
+    <meta name="description" content="Simple Quesionnaire table by HTML + jQuery">
+    <meta property="schema:name" content="Questionnaire table - HTML + jQuery">
+    <meta property="schema:description" content="Simple Quesionnaire table by HTML + jQuery">
+	<meta property="og:title" content="Questionnaire table - HTML + jQuery" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://horkenw.github.io" />
+    <meta property="og:description" content="Simple Quesionnaire table by HTML + jQuery" />
 	<title></title>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="style/quizstyle.css">
