--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="author" content="horkenw">
+  <meta name="copyright" content="horkenWong">
+  <meta name="description" content="Simple Quesionnaire table by HTML + jQuery">
+  <meta property="schema:name" content="Questionnaire table - HTML + jQuery">
+  <meta property="schema:description" content="Simple Quesionnaire table by HTML + jQuery">
+	<meta property="og:title" content="Questionnaire table - HTML + jQuery" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="http://horkenw.github.io" />
+  <meta property="og:description" content="Simple Quesionnaire table by HTML + jQuery" />
 	<title></title>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="style/quizstyle.css">
@@ -39,34 +48,104 @@
 									<div class="hrline"></div>
 								</div>
 								<div class="textarea">
-									<h2 class=" formsubtitle">
-										<textarea class="formtextInput subtitletextarea" rows="7">詳細描述</textarea></h2>
+									<h3 id="quizdescip" class=" formsubtitle">
+										<textarea class="formtextInput subtitletextarea" rows="7">詳細描述</textarea></h3>
+									<div class="hrline"></div>
+									<h3 id="footer" class=" formsubtitle">
+										<textarea class="formtextInput subtitletextarea" rows="7">表尾描述</textarea></h3>
 									<div class="hrline"></div>
 								</div>
-								<div class="group boxsize">
+								<div data-group_title="個人資料" data-group_seq='0' data-is_base_info='true' class="group boxsize denysele">
 									<div>
 										<label for="persondetail">是否填寫個資：</label>
-										<input type="radio" class="formtextInput"  name="quiztype" value="anonymous">匿名資料
+										<input type="radio" class="formtextInput"  name="quiztype" value="anonymous" checked>匿名資料
 										<input type="radio" class="formtextInput"  name="quiztype" value="person">填寫資料
 									</div>
-									<div>
-										<div class="persondetail">身分所需欄位<small>(勾選皆為必填)</small></div>
-										<div class="detailstyle">
-											<input type="checkbox"> 姓名
-											<input type="checkbox"> 電子郵件
-											<input type="checkbox"> 性別
-											<input type="checkbox"> 身分證字號
-											<input type="checkbox"> 生日
-											<input type="checkbox"> 連絡電話
-											<input type="checkbox"> 聯絡地址
+									<div class="table tablehide">
+										<div class="persondetail caption">身分所需欄位</div>
+										<div class="tr">
+											<div class="td"><input type="checkbox"></div>
+											<div class="td">欄位名稱</div>
+											<div class="td">欄位屬性</div>
+											<div class="td">必填</div>
 										</div>
-										<div class="detailstyle">
-											<input type="checkbox"> 婚姻狀況
-											<input type="checkbox"> 行業列別
-											<input type="checkbox"> 職務類別
-											<input type="checkbox"> 學歷
-											<input type="checkbox"> 年收入
-											<input type="checkbox"> 興趣與喜好
+										<div class="tr">
+											<div class="td"><input type="checkbox"></div>
+											<div class="td">姓名</div>
+											<div class="td">文字輸入</div>
+											<div class="td"></div>
+										</div>
+										<div class="tr">
+											<div class="td"><input type="checkbox"></div>
+											<div class="td">電子郵件</div>
+											<div class="td">文字輸入</div>
+											<div class="td"></div>
+										</div>
+										<div class="tr">
+											<div class="td"><input type="checkbox"></div>
+											<div class="td">性別</div>
+											<div class="td">單選項</div>
+											<div class="td"><input type="checkbox"></div>
+										</div>
+										<div class="tr">
+											<div class="td"><input type="checkbox"></div>
+											<div class="td">身分證字號</div>
+											<div class="td">文字輸入</div>
+											<div class="td"><input type="checkbox"></div>
+										</div>
+										<div class="tr">
+											<div class="td"><input type="checkbox"></div>
+											<div class="td">生日</div>
+											<div class="td">文字輸入</div>
+											<div class="td"><input type="checkbox"></div>
+										</div>
+										<div class="tr">
+											<div class="td"><input type="checkbox"></div>
+											<div class="td">連絡電話</div>
+											<div class="td">文字輸入</div>
+											<div class="td"><input type="checkbox"></div>
+										</div>
+										<div class="tr">
+											<div class="td"><input type="checkbox"></div>
+											<div class="td">聯絡地址</div>
+											<div class="td">文字輸入</div>
+											<div class="td"><input type="checkbox"></div>
+										</div>
+										<div class="tr">
+											<div class="td"><input type="checkbox"></div>
+											<div class="td">婚姻狀況</div>
+											<div class="td">單選項</div>
+											<div class="td"><input type="checkbox"></div>
+										</div>
+										<div class="tr">
+											<div class="td"><input type="checkbox"></div>
+											<div class="td">行業列別</div>
+											<div class="td">單選項</div>
+											<div class="td"><input type="checkbox"></div>
+										</div>
+										<div class="tr">
+											<div class="td"><input type="checkbox"></div>
+											<div class="td">職務類別</div>
+											<div class="td">單選項</div>
+											<div class="td"><input type="checkbox"></div>
+										</div>
+										<div class="tr">
+											<div class="td"><input type="checkbox"></div>
+											<div class="td">學歷</div>
+											<div class="td">單選項</div>
+											<div class="td"><input type="checkbox"></div>
+										</div>
+										<div class="tr">
+											<div class="td"><input type="checkbox"></div>
+											<div class="td">年收入</div>
+											<div class="td">單選項</div>
+											<div class="td"><input type="checkbox"></div>
+										</div>
+										<div class="tr">
+											<div class="td"><input type="checkbox"></div>
+											<div class="td">興趣與喜好</div>
+											<div class="td">多選項</div>
+											<div class="td"><input type="checkbox"></div>
 										</div>
 									</div>
 								</div>
@@ -75,11 +154,11 @@
 							<div id="root" class="dd">
 								<ol class="dd-list">
 									<li class="dd-item">
-										<section class="group">
+										<section data-group_seq='0' data-is_base_info='true' class="group">
 											<h1 class="dd-handle"><input class="formtextInput titletextarea" rows="1" autofocus value="題組名稱"></h1>
 											<div class="dd formfields">
 												<ol class="dd-list">
-													<li class="dd-item">													
+													<li data-type='0' data-attribute=0 data-sequence=1 class="dd-item">													
 														<div class="icon-btn icon-del">
 															<i class="material-icons icon-small icon-color">delete</i>
 														</div>
@@ -91,7 +170,7 @@
 															<textarea class="formtextInput singleinput " rows="1" placeholder="請輸入你的內容..."></textarea>
 														</div>
 													</li>
-													<li class="dd-item">
+													<li data-type='0' data-attribute=1 data-sequence=1 class="dd-item">
 														<div class="icon-btn icon-del">
 															<i class="material-icons icon-small icon-color">delete</i>
 														</div>
@@ -103,7 +182,7 @@
 															<textarea class="formtextInput singleinput " rows="4" placeholder="請輸入你的內容..."></textarea>
 														</div>
 													</li>
-													<li class="dd-item">
+													<li data-type='0' data-attribute=3 data-sequence=1 class="dd-item">
 														<div class="icon-btn icon-del">
 															<i class="material-icons icon-small icon-color">delete</i>
 														</div>
@@ -154,7 +233,7 @@
 															</div>
 														</div>
 													</li>
-													<li class="dd-item">
+													<li data-type='0' data-attribute=4 data-sequence=1 class="dd-item">
 														<div class="icon-btn icon-del">
 															<i class="material-icons icon-small icon-color">delete</i>
 														</div>
@@ -210,12 +289,12 @@
 										</section>
 									</li>
 									<li class="dd-item">
-										<section class="group">
+										<section data-group_seq='0' data-is_base_info='true' class="group">
 											<h1 class="dd-handle">
 												<input class="formtextInput titletextarea" rows="1" value="題組名稱"></h1>
 											<div class="dd formfields">
 												<ol class="dd-list">
-													<li class="dd-item">
+													<li class="dd-item" data-type='0' data-attribute=0 data-sequence=1>
 														<div class="icon-btn icon-del">
 															<i class="material-icons icon-small icon-color">delete</i>
 														</div>
@@ -227,7 +306,7 @@
 															<textarea class="formtextInput singleinput " rows="1" placeholder="請輸入你的內容..."></textarea>
 														</div>
 													</li>
-													<li class="dd-item">
+													<li class="dd-item" data-type='0' data-attribute=1 data-sequence=1>
 														<div class="icon-btn icon-del">
 															<i class="material-icons icon-small icon-color">delete</i>
 														</div>
@@ -239,7 +318,7 @@
 															<textarea class="formtextInput singleinput " rows="4" placeholder="請輸入你的內容..."></textarea>
 														</div>
 													</li>
-													<li class="dd-item">
+													<li class="dd-item" data-type='0' data-attribute=4 data-sequence=1>
 														<div class="icon-btn icon-del">
 															<i class="material-icons icon-small icon-color">delete</i>
 														</div>
