delete group function update
delete group function update

--- a/index.html
+++ b/index.html
@@ -91,9 +91,11 @@
 								<ol class="dd-list">
 									<li class="dd-item">
 										<section data-group_seq=0 data-is_base_info=true class="group">
-											<h1 class="dd-handle"><input class="formtextInput titletextarea" rows="1" autofocus value="題組名稱"></h1>
-											<div class="icon-btn icon-del">
-												<i class="material-icons icon-small icon-color">delete</i>
+											<div class="hgtitle">
+												<h1 class="dd-handle"><input class="formtextInput titletextarea" rows="1" autofocus value="題組名稱"></h1>
+												<div class="icon-btn icon-del">
+													<i class="material-icons icon-small icon-color">delete</i>
+												</div>
 											</div>
 											<div class="dd formfields">
 												<ol class="dd-list">
@@ -198,11 +200,11 @@
 									</li>
 									<li class="dd-item">
 										<section data-group_seq=0 data-is_base_info=true class="group">
-											<h1 class="dd-handle">
-												<input class="formtextInput titletextarea" rows="1" value="題組名稱">
-											</h1>
-											<div class="icon-btn icon-del">
-												<i class="material-icons icon-small icon-color">delete</i>
+											<div class="hgtitle">
+												<h1 class="dd-handle"><input class="formtextInput titletextarea" rows="1" autofocus value="題組名稱"></h1>
+												<div class="icon-btn icon-del">
+													<i class="material-icons icon-small icon-color">delete</i>
+												</div>
 											</div>
 											<div class="dd formfields">
 												<ol class="dd-list">
